--- a/templates/javascript-learning/phase_1/index.html
+++ b/templates/javascript-learning/phase_1/index.html
@@ -11,7 +11,7 @@
 <body class="wrapper">
   <div>
     <div>
-      <h1>Scope, Function, Variable | 2025.10-11 </h1>
+      <h1>Data Pattern | 2025.11 </h1>
     </div>
     <br>
     <br>
