--- a/templates/workfolder/index.ejs
+++ b/templates/workfolder/index.ejs
@@ -109,7 +109,7 @@
         </div>
       </div>
     </div>
-            <div class="blankHXXS"></div>
+    <div class="blankHXXS"></div>
   </div>
 
   <!-- Content -->
@@ -130,17 +130,14 @@
       </div>
     </div>
 
-    <!-- Modal with Content-->
+
+    <div class="spacingMedium"></div>
     <div class="wrapper">
-
-
-
-
-    </div>
-    <!-- Modal with Content-->
-
-
-    <div class="wrapper">
+      <div class="Grid Grid--full Grid--gutter">
+        <div class="Grid-cell">
+          <img src="cover_inventory_management.svg" alt="Inventory Management">
+        </div>
+      </div>
       <div class="accItem">
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
@@ -155,8 +152,6 @@
             </div>
           </div>
         </div>
-
-
 
         <div class="accContent">
           <div class="Grid Grid--gutters Grid--cols-3">
@@ -188,11 +183,14 @@
           </div>
 
 
-    <div class="spacingSmall"></div>
+          <div class="spacingSmall"></div>
+          <div class="Grid Grid--full Grid--gutter">
+            <div class="Grid-cell align-right">
+              <div class="element">
 
-
-          <div class="element">
-            <a href="bq_b2b_inventory_management/"> <button class="buttonMedium buttonFlip WhiteBg"> View Case Study </button></a>
+                <a href="bq_b2b_inventory_management/"> <button class="buttonSmall buttonPrimary"> View Case Study </button></a>
+              </div>
+            </div>
           </div>
           <div class="spacingSmall"></div>
         </div>
@@ -200,6 +198,11 @@
     </div>
 
     <div class="wrapper">
+      <!-- <div class="Grid Grid--full Grid--gutter">
+        <div class="Grid-cell">
+          <img src="cover_onboarding.svg" alt="Inventory Management">
+        </div>
+      </div> -->
       <div class="accItem">
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
@@ -1101,7 +1104,7 @@
               }) %>
               <h3 class="TextPoppins fontWeight500">Glorify App</h3>
 
-              <h3 class="textItalic fontWeight300 Grey700"> For Christian daily worship</h3>
+              <h5 class="textItalic fontWeight300 Grey700"> For Christian daily worship</h5>
 
               <ul class="listCircle">
                 <li> <span class="TextPoppins fontWeight400">Initiate Community:</span> Transform from a single-player to a multiplayer experience.
@@ -1126,7 +1129,7 @@
               }) %>
               <h3 class="TextPoppins fontWeight500">Marketing Insights Dashboard</h3>
 
-              <h3 class="textItalic fontWeight300 Grey700"> For Brand marketers</h3>
+              <h5 class="textItalic fontWeight300 Grey700"> For Brand marketers</h5>
 
               <ul class="listCircle">
                 <li> <span class="TextPoppins fontWeight400">Transform Insights:</span> Turn Reddit data into actionable insights for brand marketers.
@@ -1154,7 +1157,7 @@
                 colorTxt: 'color_VW_Pink800'
               }) %>
               <h3 class="TextPoppins fontWeight500">Interview Scheduling</h3>
-              <h3 class="textItalic fontWeight300 Grey700"> For Recuriter & hiring managers</h3>
+              <h5 class="textItalic fontWeight300 Grey700"> For Recuriter & hiring managers</h5>
 
               <ul class="listCircle">
                 <li> <span class="TextPoppins fontWeight400">Streamline Scheduling:</span> Revamp the interview scheduling process to enhance efficiency.
@@ -1294,7 +1297,7 @@
             <h3 class="">I’m a system-minded UX designer who turns complexity into clarity. My focus is building frameworks and flows that balance user intuition with business efficiency—systems that work in practice, not just in theory.
             </h3>
             <h3 class="">➢ Expands slightly, but still crisp.</h3>
-            <h3 class="">➢ Connects your systems focus to user/business outcomes (the thread that makes sense to recruiters).</h3>
+            <h3 class="">➢ Connects your systems focus to user/business outcomes.</h3>
             <h3 class="">➢ Echoes your homepage phrasing, so it feels consistent.</h3>
 
           </div>
