--- a/templates/workfolder/bq_b2b_inventory_management/index.ejs
+++ b/templates/workfolder/bq_b2b_inventory_management/index.ejs
@@ -372,7 +372,7 @@
           </div>
           <div class="Grid Grid--gutters Grid--cols-2">
             <div class="Grid-cell">
-              <img class="modal-target card2025" src="../flow_im_before.png" alt="">
+              <img class="modal-target card2025" src="flow_im_before.png" alt="">
               <h4 class="fontWeight400">Before</h4>
               <ul class="listCircle">
                 <li>Inventory split across 3+ views</li>
@@ -383,7 +383,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <img class="modal-target card2025" src="../flow_im_after.png" alt="">
+                <img class="modal-target card2025" src="flow_im_after.png" alt="">
                 <h4 class="fontWeight400">After</h4>
                 <ul class="listCircle">
                   <li>Unified view for all items</li>
