--- a/templates/workfolder/index.ejs
+++ b/templates/workfolder/index.ejs
@@ -133,11 +133,40 @@
 
     <div class="spacingMedium"></div>
     <div class="wrapper">
-      <div class="Grid Grid--full Grid--gutter">
+      <div class="Grid Grid--cols-2 u-textCenter colorBgImg">
+        <div class="Grid-cell">
+          <div class="spacingSmall"></div>
+          <div class="element">
+            <img class="modal-target" src="diagram_inventory_management_before.svg" alt="Legacy inventory UX">
+            <h5 class="TextPoppins fontWeight300">Before: Category Navigation </h5>
+            <h6 class="TextPoppins fontWeight200">Click & Click ... Back & Start Over</h6>
+
+
+            <div class="spacingSmall"></div>
+
+          </div>
+        </div>
+
+        <div class="Grid-cell">
+          <div class="spacingSmall"></div>
+
+          <div class="element">
+            <img class="modal-target" src="diagram_inventory_management_after.svg" alt="Redesigned inventory UX">
+            <h5 class="TextPoppins fontWeight300">After: Unified Inventory</h5>
+            <h6 class="TextPoppins fontWeight200">Filter & Scan</h6>
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="wrapper">
+      <!-- <div class="Grid Grid--full Grid--gutter">
         <div class="Grid-cell">
           <img src="cover_inventory_management.svg" alt="Inventory Management">
         </div>
-      </div>
+      </div> -->
       <div class="accItem">
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
@@ -639,7 +668,7 @@
             <div class="element">
               <div class="row">
                 <div class="">
-                  <h4 class="fontWeight400">BabyQuip Web Support UX: Checkout & Selection Improvements <span class="fontWeight300 textItalic">&#183; Q4 2024 - Q1 2025</span></h4>
+                  <h4 class="fontWeight400">BabyQuip Web Support UX: Checkout & QP Selection Improvements <span class="fontWeight300 textItalic">&#183; Q4 2024 - Q1 2025</span></h4>
                   <h4>Improved QP selection and checkout clarity. Supported pre-launch fixes to reduce drop-off. </h4>
 
                 </div>
