--- a/templates/workfolder/index.ejs
+++ b/templates/workfolder/index.ejs
@@ -138,7 +138,7 @@
           <div class="spacingSmall"></div>
           <div class="element">
             <img class="modal-target" src="diagram_inventory_management_before.svg" alt="Legacy inventory UX">
-            <h5 class="TextPoppins fontWeight300">Before: Category Navigation </h5>
+            <h5 class="TextPoppins fontWeight400">Before: Category Navigation </h5>
             <h6 class="TextPoppins fontWeight200">Click & Click ... Back & Start Over</h6>
 
 
@@ -152,7 +152,7 @@
 
           <div class="element">
             <img class="modal-target" src="diagram_inventory_management_after.svg" alt="Redesigned inventory UX">
-            <h5 class="TextPoppins fontWeight300">After: Unified Inventory</h5>
+            <h5 class="TextPoppins fontWeight400">After: Unified Inventory</h5>
             <h6 class="TextPoppins fontWeight200">Filter & Scan</h6>
 
           </div>
@@ -171,9 +171,13 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
+
+              <%- include(`${templatePath}/shared/base_status`, {
+              statusandtimestamp:'🚀 Launched • Q2 2025'
+              }) %>
               <div class="row">
                 <div class="">
-                  <h4 class="fontWeight400 centerTxt"><a title="View full context, metrics, and case breakdown" class="textUnderline" href="bq_b2b_inventory_management/">BabyQuip Inventory Management (Partner Portal)</a> <span class="fontWeight300 textItalic">&#160; &#183; Q2 2025 </span>&#160;<span class="centerVer"><span class="chip">Launched</span></span></h4>
+                  <h4 class="fontWeight700 centerTxt"><a title="View full context, metrics, and case breakdown" class="textUnderline" href="bq_b2b_inventory_management/">BabyQuip Inventory Management (Partner Portal)</a>&#160;</h4>
                   <h4>Scaled inventory from hobbyist QPs to power users with unified navigation, inline editing, and category surfacing. Increased efficiency 3×.</h4>
                 </div>
                 <div class="accIcon align-right"></div>
@@ -236,9 +240,14 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
+
+              <%- include(`${templatePath}/shared/base_status`, {
+              statusandtimestamp:'👩🏻‍💻 In Progress • Q3 2025'
+              }) %>
+
               <div class="row">
                 <div class="">
-                  <h4 class="centerTxt"><span class="fontWeight400">BabyQuip Onboarding Redesign (Partner Portal / GoQuip)</span> &#160; <span class="fontWeight300 textItalic"> &#183; Q3 2025</span> &#160;<span class="centerVer"><span class="chip">In Progress</span></span></h4>
+                  <h4 class="centerTxt fontWeight700">BabyQuip Onboarding Redesign (Partner Portal / GoQuip)</h4>
                   <h4>
                     Modular, category-aware onboarding for expansion across Baby, Mobility, and Party providers. Simplified setup, clarified load logic, and reduced ordering errors.
                   </h4>
@@ -354,9 +363,13 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
+
+              <%- include(`${templatePath}/shared/base_status`, {
+              statusandtimestamp:'🚀 Launched • 2021 - 2024'
+              }) %>
               <div class="row">
                 <div class="">
-                  <h4 class="fontWeight400">BookYourPet B2B Platform Redesign &#160;<span class="fontWeight300 textItalic"> &#183; 2021 - 2024</span></h4>
+                  <h4 class="fontWeight700">BookYourPet B2B Platform Redesign &#160;</h4>
                   <h4>Rebuilt booking flows for pet businesses: streamlined appointment setup, simplified workflows, and cut booking friction.
                   </h4>
                 </div>
@@ -468,9 +481,12 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
+              <%- include(`${templatePath}/shared/base_status`, {
+              statusandtimestamp:'👩🏻‍💻 In Progress • Q3 2025'
+              }) %>
               <div class="row">
                 <div>
-                  <h4 class="centerTxt"><span class="fontWeight400">BabyQuip → GoQuip Landing & Discovery Redesign</span> &#160; <span class="fontWeight300 textItalic"> &#183; Q3 2025</span> &#160; <span class="centerVer">&#160;<span class="chip">In Progress</span></span></h4>
+                  <h4 class="centerTxt"><span class="fontWeight700">BabyQuip → GoQuip Landing & Discovery Redesign</span></h4>
                   <h4>Re-architected shopping and landing for category clarity and trip-aware UX. Designed for scalability as BabyQuip expands into B2C.
                   </h4>
 
@@ -572,9 +588,12 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
+              <%- include(`${templatePath}/shared/base_status`, {
+              statusandtimestamp:'🚀 Launched • Q4 20254 - Q1 2025'
+              }) %>
               <div class="row">
                 <div class="">
-                  <h4 class="fontWeight400">BabyQuip Mobile Rental Redesign: Exploration, Consideration, Checkout Optimization <span class="fontWeight300 textItalic">&#183; Q4 2024 - Q1 2025</span></h4>
+                  <h4 class="fontWeight700">BabyQuip Mobile Rental Redesign: Exploration, Consideration, Checkout Optimization</h4>
                   <h4>Led redesign of the full rental journey. Re-engineered QP flow, trip input, and checkout into a mobile-first system.
                   </h4>
 
@@ -666,9 +685,12 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
+              <%- include(`${templatePath}/shared/base_status`, {
+              statusandtimestamp:'🚀 Launched • Q4 20254 - Q1 2025'
+              }) %>
               <div class="row">
                 <div class="">
-                  <h4 class="fontWeight400">BabyQuip Web Support UX: Checkout & QP Selection Improvements <span class="fontWeight300 textItalic">&#183; Q4 2024 - Q1 2025</span></h4>
+                  <h4 class="fontWeight700">BabyQuip Web Support UX: Checkout & QP Selection Improvements <span class="fontWeight300 textItalic">&#183; Q4 2024 - Q1 2025</span></h4>
                   <h4>Improved QP selection and checkout clarity. Supported pre-launch fixes to reduce drop-off. </h4>
 
                 </div>
@@ -746,9 +768,12 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
+              <%- include(`${templatePath}/shared/base_status`, {
+              statusandtimestamp:'🚀 Launched • Q4 2023'
+              }) %>
               <div class="row">
                 <div class="">
-                  <h4 class="fontWeight400">BookYourPet Consumer Booking <span class="fontWeight300 textItalic">&#183; Q4 2023</span></h4>
+                  <h4 class="fontWeight700">BookYourPet Consumer Booking</h4>
                   <h4>Designed a lightweight B2C booking flow: simplified sign-up, faster service search, and add-on selection. Reduced booking time to &#60;1 minute. </h4>
 
                 </div>
@@ -839,9 +864,12 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
+              <%- include(`${templatePath}/shared/base_status`, {
+              statusandtimestamp:'🚀 Launched • Q4 2024'
+              }) %>
               <div class="row">
                 <div class="">
-                  <h4 class="fontWeight400">BabyQuip Full Rental Journey Wireframe <span class="fontWeight300 textItalic">&#183; Q4 2024</span></h4>
+                  <h4 class="fontWeight700">BabyQuip Full Rental Journey Wireframe</h4>
                   <h4>Audited end-to-end rental flow and re-mapped from system logic to UX patterns. Reduced downstream bugs and improved conversion clarity.</h4>
 
                 </div>
@@ -927,9 +955,12 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
+                            <%- include(`${templatePath}/shared/base_status`, {
+              statusandtimestamp:'🚀 Launched • Q1 2025'
+              }) %>
               <div class="row">
                 <div class="">
-                  <h4 class="fontWeight400">BabyQuip Funnel × Journey Integration <span class="fontWeight300 textItalic">&#183; Q1 2025</span></h4>
+                  <h4 class="fontWeight700">BabyQuip Funnel × Journey Integration</h4>
                   <h4>Connected emotional journey (curiosity → trust → satisfaction) with business funnel (awareness → conversion). Used to guide design scope and prioritization.</h4>
 
                 </div>
@@ -1015,9 +1046,12 @@
         <div class="Grid Grid--gutter Grid--top accTrigger">
           <div class="Grid-cell">
             <div class="element">
+                  <%- include(`${templatePath}/shared/base_status`, {
+              statusandtimestamp:'🚀 Launched • Q1 2025'
+              }) %>
               <div class="row">
                 <div class="">
-                  <h4 class="fontWeight400">BabyQuip Inventory System Framing<span class="fontWeight300 textItalic">&#183; Q1 2025</span></h4>
+                  <h4 class="fontWeight700">BabyQuip Inventory System Framing</h4>
                   <h4>Proposed structural reframing to replace tab-based navigation with long-term IA clarity.</h4>
 
                 </div>
