--- a/templates/workroom/index.ejs
+++ b/templates/workroom/index.ejs
@@ -328,7 +328,7 @@
 
             </div>
             <div class="element">
-              <a href="/byp_b2b_booking"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
+              <a href="/byp_b2c_booking"> <button class="buttonMedium buttonPrimary bgVWGrey">View project
                 </button></a>
             </div>
           </div>
